# python-project-template

./: .gitignore  pyproject.toml
.github/: COMMIT_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package-ci.yml
tests/: conftest.py  test_myapp.py
