[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Akiyuki Hasegawa"]
repository = "https://github.com/hasesuns/python-project-template"


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.5.0"
pylint = "^2.7.2"
radon = "^5.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 127
target-version = ['py38']


[tool.isort]
include_trailing_comma = true
line_length = 127
multi_line_output = 3


[tool.pytest.ini_options]
markers = ["github_actions"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

