[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Akiyuki Hasegawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pylint = "^2.17.3"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311']


[tool.isort]
include_trailing_comma = true
line_length = 127
multi_line_output = 3


[tool.pytest.ini_options]
markers = ["github_actions"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

